--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ lib/wsdl/_notes/dwsync.xml
 mypage/_notes/dwsync.xml
 template_php/_notes/dwsync.xml
 bin/_notes/dwsync.xml
+wp-content/themes/cocoon-child-master/tmp/_notes/dwsync.xml
