Wordpress上での修正

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ template_php/_notes/dwsync.xml
 bin/_notes/dwsync.xml
 wp-content/themes/cocoon-child-master/tmp/_notes/dwsync.xml
 mypage/img/_notes/dwsync.xml
+wp-content/themes/cocoon-child-master/_notes/dwsync.xml
